classDiagram
    direction LR

    class User {
        id: string
        name: string
        email: string
        role: string
    }
    class Product {
        id: string
        name: string
        description: string
    }
    class Member {
        id: string
        role: string
    }
    class Version {
        id: string
        time: string
        major: number
        minor: number
        patch: number
        description: string
    }
    class File {
        id: string
        type: string
        data: any
    }
    class Reference {
        type: string
    }
    class Issue {
        id: string
        time: date
        label: string
        description: string
        state: string
    }
    class Comment {
        id: string
        time: string
        text: string
    }
    class Milestone {
        id: string
        start: date
        ende: date
        label: string
        description: string
    }

    <<Entity>> User
    <<Entity>> Product
    <<Entity>> Member
    <<Entity>> Version
    <<Entity>> Issue
    <<Entity>> Comment
    <<Entity>> Milestone

    <<File>> File

    <<Data>> Reference

    User <.. Member : references
    Member --* Product : contains

    Issue "1" *-- "*" Comment : contains
    Product "1" *-- "*" Issue : contains

    User "1" <.. "*" Product : created by
    User "1" <.. "*" Version : created by
    User "1" <.. "*" Issue : created by
    User "1" <.. "*" Comment : created by
    User "1" <.. "*" Milestone : created by
    
    Product "1" *-- "*" Version : contains
    Product "1" *-- "*" Milestone : contains
    
    Version "1" *-- "1" File : contains
    Version "1" ..> "*" Version : references
    Version "*" *-- "*" Reference : contains
    File  "1" <.. "1" Reference : references
    
    Issue "*" ..> "0..1" Milestone : assigned to
    Issue "*" ..> "0..1" User : assigned to
    Issue "*" *-- "*" Reference : contains
    Comment "*" *-- "*" Reference : contains

    Reference <|-- TextReference: inherits
    Reference <|-- NodeReference: inherits
    Reference <|-- AreaReference: inherits
    Reference <|-- TimeReference: inherits
    Reference <|-- CompositeReference: inherits
    Reference "*" --* "0..1" CompositeReference: contains

    class TextReference {
        fromChar: int
        toChar: int
    }
    class NodeReference {
        path: string
    }
    class AreaReference {
        x1, y1, z1: int
        x2, y2, z2: int
    }
    class TimeReference {
        fromTime: long
        toTime: long
    }
    class CompositeReference {

    }

    <<Data>> TextReference
    <<Data>> NodeReference
    <<Data>> AreaReference
    <<Data>> TimeReference
    <<Data>> CompositeReference